fixed: checkboxes, white space, pdf and activities link spacing and header menu spacing

--- a/public/stylesheets/fixes_ie7.css
+++ b/public/stylesheets/fixes_ie7.css
@@ -43,3 +43,9 @@ h4 .h4_link {
 
 .section_summary_toggles {
   width: 100px; }
+
+#new_activity .labelled .checkbox input {
+  margin-top: -3px; }
+
+#pdf_link {
+  margin-top: -20px; }
