--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -30,7 +30,9 @@ h2 {
   margin: 0px 20px; }
 
 h3 {
-  font-size: 1.2em; }
+  font-size: 1.2em;
+  width: 420px;
+  clear: none; }
 
 h4 {
   font-size: 1.1em; }
